# kubeorph

./: Cargo.toml  LICENSE
src/: main.rs  pretty.rs  size.rs
