[package]
name = "kubeorph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
